--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <nav class="navbar">
             <a href="#">Inicio</a>
-            <a href="#">Nosotros</a>
-            <a href="#">Contacto</a>
+            <a href="#about">Nosotros</a>
+            <a href="#contact">Contacto</a>
 
         </nav>
 
@@ -67,7 +67,7 @@
 
     </section>
 
-    <section class="content about">
+    <section id="about" class="content about">
 
         <h2 class="title">Sobre nosotros</h2>
         <p>Somos una empresa que quiere apoyar a todas esas personas que no cuentan 
@@ -98,10 +98,10 @@
 
     </section>
 
-    <section class="content contact">
+    <section id="contact" class="content contact">
         <h2 class="title">Contacto</h2>
         <p>(646) 386 9543</p>
-        <p>Protesis.printmotion@gmail.com</p>
+        <a href="mailto:Protesis.printmotion@gmail.com"><p>Protesis.printmotion@gmail.com</p></a>
 
     </section>
     
