--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
 
             <div class="box">
                 <h3>Mision</h3>
-                <p>Nuestra misión es proporcionar soluciones accesibles y sostenibles 
+                <p1>Nuestra misión es proporcionar soluciones accesibles y sostenibles 
                     ofreciendo prótesis de alta calidad fabricadas con materiales 
                     reciclados, para que más personas puedan recuperar su movilidad y 
-                    calidad de vida sin comprometer su economía ni el medio ambiente.</p>
+                    calidad de vida sin comprometer su economía ni el medio ambiente.</p1>
             </div>
             <div class="box">
                 <h3>Vision</h3>
-                <p>Nos esforzamos por ser líderes en la innovación en el campo de la 
+                <p2>Nos esforzamos por ser líderes en la innovación en el campo de la 
                     fabricación de prótesis, contribuyendo así a una sociedad más 
                     inclusiva con la población y más respetuosa con el medio ambiente. 
-                </p>
+                </p2>
             </div>
             <div class="box">
                 <h3>ODS</h3>
-                <p>3 .Salud y Bienestar.
+                <p3>3 .Salud y Bienestar.
                     9. Industria, Innovación e infraestructura.
                     12 .Producción y Consumo responsable.
-                    15 .Flora y Fauna terrenal</p>
+                    15 .Flora y Fauna terrenal</p3>
             </div>
 
         </div>
@@ -70,14 +70,14 @@
     <section id="about" class="content about">
 
         <h2 class="title">Sobre nosotros</h2>
-        <p>Somos una empresa que quiere apoyar a todas esas personas que no cuentan 
+        <p4>Somos una empresa que quiere apoyar a todas esas personas que no cuentan 
             con los recursos económicos necesarios para poder conseguir una prótesis 
             de buena calidad que les facilite elaborar sus actividades diarias y les 
             brinde movilidad, por eso nosotros elaboramos una prótesis que gracias a 
             sus materiales que permiten que la producción sea más económica a las prótesis 
             del mercado actual, les brinde todo eso a un bajo costo, además de ser elaborado 
             por productos ecológicos de alta calidad para poder preservar los ecosistemas y 
-            la vida que se encuentra en ellas.</p>
+            la vida que se encuentra en ellas.</p4>
 
             <a href="#" class="btn">Saber mas</a>
 
@@ -88,9 +88,9 @@
         <article class="contain">
 
             <h2 class="title">¿Que es ABS?</h2>
-            <p>La composición que tiene el ABS es 50% de Estireno y el otro 50% se divide entre el Butadieno y Acrilonitrilo.   
+            <p5>La composición que tiene el ABS es 50% de Estireno y el otro 50% se divide entre el Butadieno y Acrilonitrilo.   
                 Este se puede encontrar en: juguetes, bienes de consumo, teléfonos, cascos de seguridad, paneles interiores para puertas, pilares, tapicería de asientos, rejillas, tableros de mandos, carcasas para espejos.
-                </p>
+                </p5>ggg
 
                 
 
@@ -100,7 +100,7 @@
 
     <section id="contact" class="content contact">
         <h2 class="title">Contacto</h2>
-        <p>(646) 386 9543</p>
+        <p6>(646) 386 9543</p6>
         <a href="mailto:Protesis.printmotion@gmail.com"><p>Protesis.printmotion@gmail.com</p></a>
 
     </section>
