--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </div>
             <div class="box">
                 <h3>ODS</h3>
-                <p3>3 .Salud y Bienestar.
-                    9. Industria, Innovación e infraestructura.
-                    12 .Producción y Consumo responsable.
+                <p3>3 .Salud y Bienestar.<br>
+                    9. Industria, Innovación e infraestructura.<br>
+                    12 .Producción y Consumo responsable.<br>
                     15 .Flora y Fauna terrenal</p3>
             </div>
 
@@ -91,8 +91,6 @@
             <p5>La composición que tiene el ABS es 50% de Estireno y el otro 50% se divide entre el Butadieno y Acrilonitrilo.   
                 Este se puede encontrar en: juguetes, bienes de consumo, teléfonos, cascos de seguridad, paneles interiores para puertas, pilares, tapicería de asientos, rejillas, tableros de mandos, carcasas para espejos.
                 </p5>ggg
-
-                
 
         </article>
 
