--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section id="contact" class="content contact">
         <h2 class="title">Contacto</h2>
         <p6>(646) 386 9543</p6>
-        <a href="mailto:Protesis.printmotion@gmail.com"><p>Protesis.printmotion@gmail.com</p></a>
+        <a href="mailto:Protesis.printmotion@gmail.com"><p id="mailto" >Protesis.printmotion@gmail.com</p></a>
 
     </section>
     
