--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             por productos ecológicos de alta calidad para poder preservar los ecosistemas y 
             la vida que se encuentra en ellas.</p4>
 
-
+            <i> class="fa-brands fa-youtube" </i>
             <a href="https://docs.google.com/document/d/1wJv4SQNwMYt1S36X-cULIk5FTPs9yhzBGqBaSwbFmBo/edit" class="btn">Saber mas</a>
 
     </section>
