--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <div class="box-container">
 
             <div class="box">
-                <h3>Mision</h3>
+                <h3>Misión</h3>
                 <p1>Nuestra misión es proporcionar soluciones accesibles y sostenibles 
                     ofreciendo prótesis de alta calidad fabricadas con materiales 
                     reciclados, para que más personas puedan recuperar su movilidad y 
                     calidad de vida sin comprometer su economía ni el medio ambiente.</p1>
             </div>
             <div class="box">
-                <h3>Vision</h3>
+                <h3>Visión</h3>
                 <p2>Nos esforzamos por ser líderes en la innovación en el campo de la 
                     fabricación de prótesis, contribuyendo así a una sociedad más 
                     inclusiva con la población y más respetuosa con el medio ambiente. 
@@ -58,7 +58,7 @@
             <div class="box">
                 <h3>ODS</h3>
                 <p3>3 .Salud y Bienestar.<br>
-                    9. Industria, Innovación e infraestructura.<br>
+                    9. Industria, Innovación e Infraestructura.<br>
                     12 .Producción y Consumo responsable.<br>
                     15 .Flora y Fauna terrenal</p3>
             </div>
@@ -79,7 +79,7 @@
             por productos ecológicos de alta calidad para poder preservar los ecosistemas y 
             la vida que se encuentra en ellas.</p4>
 
-            <a href="https://www.youtube.com/watch?v=1kd79eyYdSo" class="btn">Conocenos</a></a> 
+            <a href="https://www.youtube.com/watch?v=1kd79eyYdSo" class="btn">Conócenos</a></a> 
             <a href="https://docs.google.com/document/d/1wJv4SQNwMYt1S36X-cULIk5FTPs9yhzBGqBaSwbFmBo/edit" class="btn">Saber mas</a>
 
     </section>
@@ -88,10 +88,10 @@
 
         <article class="contain">
 
-            <h2 class="title">¿Que es ABS?</h2>
+            <h2 class="title">¿Qué es ABS?</h2>
             <p5>La composición que tiene el ABS es 50% de Estireno y el otro 50% se divide entre el Butadieno y Acrilonitrilo.   
                 Este se puede encontrar en: juguetes, bienes de consumo, teléfonos, cascos de seguridad, paneles interiores para puertas, pilares, tapicería de asientos, rejillas, tableros de mandos, carcasas para espejos.
-                </p5>ggg
+                </p5>
 
         </article>
 
