--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <div class="box-container">
 
             <div class="box">
-                <h3>Misión</h3>
+                <h3><u>Misión</u></h3>
                 <p1>Nuestra misión es proporcionar soluciones accesibles y sostenibles 
                     ofreciendo prótesis de alta calidad fabricadas con materiales 
                     reciclados, para que más personas puedan recuperar su movilidad y 
                     calidad de vida sin comprometer su economía ni el medio ambiente.</p1>
             </div>
             <div class="box">
-                <h3>Visión</h3>
+                <h3><u>Visión</u></h3>
                 <p2>Nos esforzamos por ser líderes en la innovación en el campo de la 
                     fabricación de prótesis, contribuyendo así a una sociedad más 
                     inclusiva con la población y más respetuosa con el medio ambiente. 
@@ -69,7 +69,7 @@
 
     <section id="about" class="content about">
 
-        <h2 class="title">Sobre nosotros</h2>
+        <h2 class="title"><b>Sobre nosotros</b></h2>
         <p4>Somos una empresa que quiere apoyar a todas esas personas que no cuentan 
             con los recursos económicos necesarios para poder conseguir una prótesis 
             de buena calidad que les facilite elaborar sus actividades diarias y les 
@@ -80,7 +80,7 @@
             la vida que se encuentra en ellas.</p4>
 
             <a href="https://www.youtube.com/watch?v=1kd79eyYdSo" class="btn">Conócenos</a></a> 
-            <a href="https://docs.google.com/document/d/1wJv4SQNwMYt1S36X-cULIk5FTPs9yhzBGqBaSwbFmBo/edit" class="btn">Saber mas</a>
+            <a href="https://docs.google.com/document/d/1wJv4SQNwMYt1S36X-cULIk5FTPs9yhzBGqBaSwbFmBo/edit" class="btn">Saber más</a>
 
     </section>
 
