--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>print-motion</title>
+    <title>PrintMotion</title>
 
 </head>
 <body>
@@ -37,7 +37,7 @@
 
     <section class="content sau">
 
-        <h2 class="title">PRINTmotion</h2>
+        <h2 class="title">PrintMotion</h2>
         
         <div class="box-container">
 
@@ -57,10 +57,11 @@
             </div>
             <div class="box">
                 <h3>ODS</h3>
-                <p3>3 .Salud y Bienestar.<br>
-                    9. Industria, Innovación e Infraestructura.<br>
-                    12 .Producción y Consumo responsable.<br>
-                    15 .Flora y Fauna terrenal</p3>
+                <p3><ul>
+                    3. Salud y Bienestar<br>
+                    9. Industria, Innovación e Infraestructura<br>
+                    12. Producción y Consumo responsable<br>
+                    15. Flora y Fauna terrenal</p3>
             </div>
 
         </div>
@@ -84,7 +85,9 @@
 
     </section>
 
-    <section class="content price">
+    <hr class = "rounded">
+
+    <section class="content abs">
 
         <article class="contain">
 
@@ -99,7 +102,7 @@
 
     <section id="contact" class="content contact">
         <h2 class="title">Contacto</h2>
-        <p6>(646) 386 9543</p6>
+        <p6>Telefono: (646) 386 9543</p6>
         <a href="mailto:Protesis.printmotion@gmail.com"><p id="mailto" >Protesis.printmotion@gmail.com</p></a>
 
     </section>
